# calm-dsl

./: .bash_completion  .bashrc  .coveragerc  .deepsource.toml  .gitignore  CalmVersion  Dockerfile  MANIFEST.in  Makefile  README.md  ahv.json  cache_data.json  calm.py  config.ini  config_test.json  dev-requirements.txt  existing.json  gui-requirements.txt  metadata.json  mock_dsl.db  oss-disclosures-calm-dsl-v3.7.0.txt  oss-disclosures-calm-dsl-v3.7.2.1.txt  oss-disclosures-calm-dsl-v3.7.2.2.txt  oss-disclosures-calm-dsl-v3.8.0.txt  oss-disclosures-calm-dsl-v3.8.1.txt  oss-disclosures-calm-dsl-v4.0.0.txt  oss-disclosures-calm-dsl-v4.1.0.txt  oss-disclosures-calm-dsl-v4.1.1.txt  oss-disclosures-calm-dsl-v4.2.0.txt  oss-disclosures-calm-dsl-v4.2.1.txt  pyproject.toml  pytest.ini  release_config.json  requirements.txt  scratch.py  setup.cfg  setup.py  single_vm.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md  feature_request.md
.github/workflows/: build-new.yml  build.yml  build_tests.yml  pre_commit_test.yml  release.yml  sync-repo.yml
Redis_Cluster/: blueprint.py
Redis_Cluster/scripts/: Package_PackageSlaveVMWare_Action___install___Task_RedisSlaveInstallandConfigure.sh  Package_RedisMasterGCPPackage_Action___install___Task_RedisMasterInstallandConfigure.sh  Package_RedisMasterPackageAWS_Action___install___Task_RedisMasterInstallandConfigure.sh  Package_RedisMasterPackage_Action___uninstall___Task_PackageUninstallTask.sh  Package_RedisSlavePackage_Action___uninstall___Task_PackageUninstallTask.sh
Redis_Cluster/specs/: RedisGCPSlave_create_spec_editables.yaml  RedisGCPSlave_provider_spec.yaml  RedisMasterAWS_create_spec_editables.yaml  RedisMasterAzure_provider_spec.yaml  RedisMasterVMWare_provider_spec.yaml  RedisSlaveAzure_create_spec_editables.yaml  RedisSlave_create_spec_editables.yaml
calm/cli/: calm_cli.py
calm/db/: __init__.py  crypto.py  db_handler.py  dsl.db  helper.py  secret.py
calm/db_config/: __init__.py
calm/dsl/: builtins.py  constants.py
calm/secrets/: foo.txt
calm_nb_ext/: __init__.py  calm_loader.py
config/server/: config.ini
docs/: README.md
docs/01-Calm-Terminology/: Dependency-Task-Blog-Final.json  Dependency-Task-Blog-Initial.json  README.md
docs/02-DSL-Blueprint-Architecture/: README.md
docs/03-Quickstart/: DevWorkstation.json  README.md
docs/04-Credentials/: README.md
docs/05-VPC/: README.md
docs/06-Accounts/: README.md
docs/06-Approvals/: README.md
docs/07-Decompiling Runbooks/: README.md
docs/08-NDB-tasks/: Readme.md
docs/Accounts/: README.md
docs/Approvals/: README.md
docs/Decompiling Blueprints/: README.md
server/: config.ini
test_decompile_env/: environment.py  test-result.html
test_decompile_env_aws/: environment.py
test_decompile_env_gcp/: environment.py
test_decompile_env_vmware/: environment.py
test_dsl_decompile/: project.py
tests/: conftest.py  constants.py  test_single_class.py  testprep.py  utils.py
(+1749 files in other folders)
