[build-system]
requires = ["setuptools>=61.0,<70.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calm-dsl"
description = "NCM Self Service DSL for blueprints"
authors = [
    {name = "Nutanix", email = "nucalm@nutanix.com"}
]
dynamic = ["version", "dependencies"]
license = {file = "LICENSE"}
keywords = ["calm", "blueprints", "dsl"]

readme = { file = "README.md", content-type = "text/markdown" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8"
]

[project.urls]
Homepage = "https://github.com/nutanix/calm-dsl"

[project.scripts]
calm = "calm.dsl.cli:main"

[tool.setuptools.dynamic] 
version = {file = ["CalmVersion"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include=["calm.*", "examples*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | examples
)/
'''